fix for prefix of component
Change-Id: I5a349c756ff07d5a3c622cf43ffd26f7068fbdc8

--- a/ucb/source/ucp/security/ucpsecurity.component
+++ b/ucb/source/ucp/security/ucpsecurity.component
@@ -18,7 +18,7 @@
  -->
 
 <component loader="com.sun.star.loader.SharedLibrary" environment="@CPPU_ENV@"
-    prefix="ucpfile" xmlns="http://openoffice.org/2010/uno-components">
+    prefix="ucpsecurity" xmlns="http://openoffice.org/2010/uno-components">
   <implementation name="com.sun.star.comp.ucb.SecurityProvider">
     <service name="com.sun.star.ucb.SecurityContentProvider"/>
   </implementation>
